--- a/playtronos/efiboot/loader/entries/archiso-x86_64-linux.conf
+++ b/playtronos/efiboot/loader/entries/archiso-x86_64-linux.conf
@@ -1,9 +1,9 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-title   Install ChimeraOS
-linux   /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux-chimeraos
+title   Install PlaytronOS
+linux   /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 initrd  /%INSTALL_DIR%/boot/intel-ucode.img
 initrd  /%INSTALL_DIR%/boot/amd-ucode.img
-initrd  /%INSTALL_DIR%/boot/x86_64/initramfs-linux-chimeraos.img
+initrd  /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 options archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% nomodeset
