--- a/playtronos/pacman.conf.template
+++ b/playtronos/pacman.conf.template
@@ -100,6 +100,6 @@ Include = /etc/pacman.d/mirrorlist
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 
-[chimeraos]
+[playtronos]
 SigLevel = Optional TrustAll
 Server = file://LOCAL_REPO
