--- a/playtronos/airootfs/etc/mkinitcpio.conf
+++ b/playtronos/airootfs/etc/mkinitcpio.conf
@@ -52,7 +52,7 @@ FILES=()
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr, fsck and shutdown hooks.
-HOOKS=(base udev memdisk archiso archiso_loop_mnt archiso_kms block filesystems keyboard microcode)
+HOOKS=(base plymouth udev memdisk archiso archiso_loop_mnt archiso_kms block filesystems keyboard microcode)
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, gzip compression
